--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@iconify-json/tabler": "^1.2.23",
+        "@iconify/tailwind4": "^1.1.0",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
@@ -15,6 +17,9 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "apexcharts": "^5.3.6",
+        "flyonui": "^2.4.1",
+        "lodash": "^4.17.21",
         "sonner": "^2.0.7"
     }
 }
