--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "barryvdh/laravel-snappy": "^1.0",
+        "elibyy/tcpdf-laravel": "^11.5",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "stripe/stripe-php": "^18.2"
