--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,4 @@
+
 {
     "$schema": "https://getcomposer.org/schema.json",
     "name": "laravel/laravel",
@@ -15,6 +16,7 @@
         "elibyy/tcpdf-laravel": "^11.5",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "mcamara/laravel-localization": "^2.3",
         "stripe/stripe-php": "^18.2"
     },
     "require-dev": {
@@ -31,7 +33,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+         "files": [
+        "app/Helpers/helpers.php"
+    ]
     },
     "autoload-dev": {
         "psr-4": {
